[gd_scene load_steps=2 format=3 uid="uid://onboarding_link"]

[ext_resource type="Script" path="res://src/child_mode/onboarding_link.gd" id="1_join"]

[node name="OnboardingLink" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_join")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.2, 1)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Join Hero Quest"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Center/VBox"]
layout_mode = 2
text = "Look at the Commander's phone
and enter the secret code"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CodeInput" type="LineEdit" parent="Center/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "______"
alignment = 1
max_length = 6

[node name="SubmitButton" type="Button" parent="Center/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "LINK DEVICE"

[node name="ToParentButton" type="Button" parent="Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Setup as Parent instead"
flat = true


[node name="StatusLabel" type="Label" parent="Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Waiting for code..."
horizontal_alignment = 1
